--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "cloudinary": "^1.23.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "formidable": "^1.2.2",
     "hbs": "^4.1.1",
     "http-errors": "~1.6.3",
     "jsdom": "^16.4.0",
